Bug 1012551 - [tarako] picture preview in edit mode sometimes appear abnormal after unlock screen. r=sotaro. a=1.3t+